--- a/css/reset.css
+++ b/css/reset.css
@@ -7,5 +7,7 @@
 }
 
 html, body {
+  overflow-x: hidden;
+  width: 100%;
   height: 100%;
 }
